@@ -13,8 +13,19 @@ __thiscall void HUD::LoadGraphics();
 "558bec8b55??33c0391174??4081c1b006000083f80872??5dc20400":
 __thiscall void HUD::FlashRedHearts(Entity_Player *player);
 
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ec48020000":
+__stdcall void HUD::ShowItemText(Entity_Player * param_1, ItemConfig_Item * param_2);
+
+"558bec83e4f883ec1c807d??00":
+__thiscall void HUD::ShowItemTextCustom(wchar_t * title, wchar_t * subtitle, bool isSticky, bool isCurseDisplay);
+
 "558bec81eca8010000":
-__thiscall void HUD::ShowItemText(char* param_1,char *param_2,bool iscurse,bool idk);
+__thiscall void HUD::ShowItemTextCustomUTF8(char * title, char * subtitle, bool isSticky, bool isCurseDisplay);
+
+"558bec83e4f883ec188bd1":
+__thiscall void HUD::ShowFortuneText(int * * param_1);
+
+
 
 struct HUD depends (PlayerHUD, ANM2, StatHUD) { {{
 	inline PlayerHUD* GetPlayerHUD(int index) { return (PlayerHUD*)((char*)this + index * 1712); }
