@@ -1,4 +1,10 @@
 v1.x.x -
+Additions:
+* ModCallbacks:
+	- MC_PRE_FORTUNE_DISPLAY
+		Called before a fortune paper is displayed.
+	- MC_PRE_ITEM_TEXT_DISPLAY (title, subtitle, isSticky, isCurseDisplay)
+		Called before an item text is displayed (such as with picking up an item, Poke Go, stage title, etc.)
 Modified:
 * Isaac:
 	PlayCutscene(CutsceneID, CleanGameState = false)
